# begriff

./: .env.sample  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  run_telegram.py
app/: __init__.py  config.py  models.py  routes.py  service.py
app/bus/: __init__.py  saving_backends.py  test_bus.py
app/core/: __init__.py  models.py  service.py
app/image/: __init__.py  service.py
app/llm/: __init__.py  language_detection.py  service.py
app/messenger/: __init__.py  context.py  router.py  telegram.py  utils.py
app/models/: __init__.py  core.py  srs.py
app/notes/: __init__.py  example_note.py  language.py  note.py  word_note.py
app/service/: __init__.py  core.py  llm.py  srs.py
app/srs/: __init__.py  card.py  models.py  service.py  view.py
app/swagger/: api_docs.yaml
app/telegram/: __init__.py  bot.py  clarify.py  common.py  example.py  language.py  note.py  note_list.py  onboarding.py  recap.py  router.py  study.py  translate.py  utils.py
app/ui/: __init__.py  saving_backends.py  service.py  test_ui.py
app/util/: __init__.py
core/: __init__.py
core/bus/: __init__.py  service.py  test_bus.py
core/db/: __init__.py
core/i18n/: __init__.py  catalog.py  test_catalog.py
core/llm/: __init__.py
core/messenger/: __init__.py  (+3 more)
docs/: hacking.md  high_level.md  high_level.org  low_level.md  low_level.org
migrations/: 01_copy_note_translations_to_explanations.py  2025-07-28-fix-c986644ee621-jsons.py
tests/: test_api.py  test_image.py  test_models.py  test_service.py  test_telegram.py
(+15 files in other folders)
